# agentic_commerce

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 05baa9fce423_add_wishlist_items_table.py  10609ad05102_initial_schema.py  279c0497ad9c_add_payment_fields_to_orders.py  31a365536598_initial.py  4118e577bdcf_add_unique_constraint_on_product_sku.py  48b85ffeceb1_create_reviews_table_remove_reviews_.py  72182c1916a7_add_pending_payments_remove_pending_.py  7cb4abe5b620_add_cart_and_cart_item_tables.py  9d16943b1d11_initial.py  a79298f5e940_add_customer_profile_fields_and_.py  ac11cc4e7da5_add_date_of_birth_and_gender_to_users.py  bc20414a43f3_add_orders_and_order_items_tables.py  faa0d6559131_add_total_column_to_orders.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  agent.py  conversation.py  intent.py  prompts.py  schemas.py  tools.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: config.py  email.py  exceptions.py  (+1 more)
backend/data/: new_products.json
backend/scripts/: create_admin.py  seed.py  seed_products.py
backend/tests/: conftest.py  e2e_chat.py  test_admin.py  test_ai_tools.py  test_auth.py  test_cart.py  test_cart_saved.py  test_categories.py  test_chat.py  test_google_auth.py  test_health.py  test_order_status.py  test_orders.py  test_products.py  test_razorpay_integration.py  test_razorpay_service.py  test_reviews.py  test_webhooks.py  test_wishlist.py
(+178 files in other folders)
